--- a/The Audio Tale/The Audio Tale/The Audio Tale.vcxproj
+++ b/The Audio Tale/The Audio Tale/The Audio Tale.vcxproj
@@ -91,11 +91,16 @@
   <ItemGroup>
     <ClCompile Include="audioParser.cpp" />
     <ClCompile Include="FMODLoader.cpp" />
+    <ClCompile Include="GraphicsManager.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="audioParser.h" />
     <ClInclude Include="FMODLoader.h" />
+    <ClInclude Include="GraphicsManager.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="sprite.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
