--- a/The Audio Tale/The Audio Tale/The Audio Tale.vcxproj.filters
+++ b/The Audio Tale/The Audio Tale/The Audio Tale.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="FMODLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphicsManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="audioParser.h">
@@ -35,5 +38,13 @@
     <ClInclude Include="FMODLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GraphicsManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="sprite.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
