--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 *.lai
 *.la
 *.a
-*.lib
+#*.lib
 
 # Executables
 *.exe
@@ -28,10 +28,12 @@
 *.app
 
 # VS proj
-.sdf
-.opensdf
-.tlog
-$GIT_DIR/TheAudio Tale/The Audio Tale/Debug
-$GIT_DIR/TheAudio Tale/The Audio Tale/Release
-$GIT_DIR/TheAudio Tale/Debug
-$GIT_DIR/TheAudio Tale/Release
+*.sdf
+*.opensdf
+*.tlog
+
+$GIT_DIR/The\ Audio\ Tale/The\ Audio\ Tale/Debug
+$GIT_DIR/The\ Audio\ Tale/The\ Audio\ Tale/Release
+$GIT_DIR/The\ Audio\ Tale/Debug
+$GIT_DIR/The\ Audio\ Tale/
+$GIT_DIR/The\ Audio\ Tale/Release
