--- a/The Audio Tale/The Audio Tale/The Audio Tale.vcxproj
+++ b/The Audio Tale/The Audio Tale/The Audio Tale.vcxproj
@@ -41,13 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Benjamin\Code\Github\TheAudioTale\FMOD\api\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Benjamin\Code\Github\TheAudioTale\FMOD\api\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\..\FMOD\api\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\..\FMOD\api\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Users\Benjamin\Code\Github\TheAudioTale\FMOD\api\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Benjamin\Code\Github\TheAudioTale\FMOD\api\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\..\FMOD\api\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\..\FMOD\api\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -56,7 +56,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Benjamin\Code\Github\TheAudioTale\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -74,14 +74,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Benjamin\Code\Github\TheAudioTale\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Users\Benjamin\Code\Github\TheAudioTale\SFML_bin\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\..\SFML_bin\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>fmodex_vc.lib;sfml-audio.lib;sfml-graphics.lib;sfml-system.lib;sfml-window.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -93,11 +93,13 @@
     <ClCompile Include="FMODLoader.cpp" />
     <ClCompile Include="GraphicsManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Particle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="audioParser.h" />
     <ClInclude Include="FMODLoader.h" />
     <ClInclude Include="GraphicsManager.h" />
+    <ClInclude Include="Particle.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="sprite.png" />
