--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+#*.dll
 
 # Fortran module files
 *.mod
@@ -20,7 +20,7 @@
 *.lai
 *.la
 *.a
-*.lib
+#*.lib
 
 # Executables
 *.exe
@@ -32,6 +32,7 @@
 *.opensdf
 *.tlog
 *.log
+#*.sln
 
 $GIT_DIR/The\ Audio\ Tale/The\ Audio\ Tale/Debug
 $GIT_DIR/The\ Audio\ Tale/The\ Audio\ Tale/Release
